TEST_PROGRAMS/VALID/07/bool.go
package main
var x = true
