TEST_PROGRAMS/INVALID/14/0150_one_line_multiple_decl.go
package x

var (x=2)
